# sdl2-cmake-mingw32-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
include/: Lesson06.h  LessonBase.h  LessonBase2.h
src/: Game.cpp  Game.h  GameBase.cpp  GameBase.h  Lesson06.cpp  LessonBase.cpp  LessonBase2.cpp  main.cpp
